--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Tourist Guide By Mahesh</title>
+    <title>Tourist Guide By MaheshAB</title>
     <meta name="description" content>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
