--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@ window.__mirage2 = {petok:"d332294f8cd1c8388df4dd39ba1e92cf26b0f1af-1614013487-1
 <div class="col-xl-4 col-lg-4 d-none d-lg-block">
 <div class="social_wrap d-flex align-items-center justify-content-end">
 <div class="number">
-<p> <i class="fa fa-phone"></i> 10(256)-928 256</p>
+<p> <i class="fa fa-phone"></i> 917854632810</p>
 </div>
 <div class="social_links d-none d-xl-block">
 <ul>
