Changes By Nandu for JS

--- a/index2.html
+++ b/index2.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="css/slicknav.css">
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css">
     <link rel="stylesheet" href="css/style.css">
+
     <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
     <!-- Google fonts-->
     <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
@@ -55,6 +56,7 @@
         firebase.initializeApp(firebaseConfig);
         firebase.analytics();
     </script>
+    <script src="js/indexMain.js"></script>
 </head>
 
 <body>
@@ -112,7 +114,7 @@
                             <div class="col-xl-4 col-lg-4 d-none d-lg-block">
                                 <div class="social_wrap d-flex align-items-center justify-content-end">
                                     <div class="number">
-                                        <p> <i class="fa fa-phone"></i> 10(256)-928 256</p>
+                                        <p> <i class="fa fa-phone"></i> 917854632810</p>
                                     </div>
                                     <div class="social_links d-none d-xl-block">
                                         <ul>
@@ -223,8 +225,7 @@
                 <div class="col-lg-6">
                     <div class="section_title text-center mb_70">
                         <h3>Popular Destination</h3>
-                        <p>Suffered alteration in some form, by injected humour or good day randomised booth anim 8-bit
-                            hella wolf moon beard words.</p>
+
                     </div>
                 </div>
             </div>
@@ -284,12 +285,12 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="single_destination">
                         <div class="thumb">
-                            <img data-cfsrc="img/destination/5.png" alt
-                                style="display:none;visibility:hidden;"><noscript><img src="img/destination/5.png"
+                            <img data-cfsrc="img/destination/goa.png" alt
+                                style="display:none;visibility:hidden;"><noscript><img src="img/destination/goa.png"
                                     alt></noscript>
                         </div>
                         <div class="content">
-                            <p class="d-flex align-items-center">Maldives <a href="travel_destination.html"> 02
+                            <p class="d-flex align-items-center">Goa <a href="travel_destination.html"> 02
                                     Places</a> </p>
                         </div>
                     </div>
@@ -297,12 +298,12 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="single_destination">
                         <div class="thumb">
-                            <img data-cfsrc="img/destination/6.png" alt
-                                style="display:none;visibility:hidden;"><noscript><img src="img/destination/6.png"
-                                    alt></noscript>
+                            <img data-cfsrc="img/destination/jaisalmer.png" alt
+                                style="display:none;visibility:hidden;"><noscript><img
+                                    src="img/destination/jaisalmer.png" alt></noscript>
                         </div>
                         <div class="content">
-                            <p class="d-flex align-items-center">Indonesia <a href="travel_destination.html"> 05
+                            <p class="d-flex align-items-center">Jaisalmer <a href="travel_destination.html"> 05
                                     Places</a> </p>
                         </div>
                     </div>
@@ -352,8 +353,6 @@
                 <div class="col-lg-6">
                     <div class="section_title text-center mb_70">
                         <h3>Popular Places</h3>
-                        <p>Suffered alteration in some form, by injected humour or good day randomised booth anim 8-bit
-                            hella wolf moon beard words.</p>
                     </div>
                 </div>
             </div>
@@ -362,14 +361,14 @@
                     <div class="single_place">
                         <div class="thumb">
                             <img data-cfsrc="img/place/1.png" alt style="display:none;visibility:hidden;"><noscript><img
-                                    src="img/place/1.png" alt></noscript>
-                            <a href="#" class="prise">$500</a>
+                                    src="img/place/1. png" alt></noscript>
+                            <a href="#" class="prise"></a>
                         </div>
                         <div class="place_info">
                             <a href="destination_details.html">
-                                <h3>California</h3>
+                                <h3>Udaipur</h3>
                             </a>
-                            <p>United State of America</p>
+                            <p>India</p>
                             <div class="rating_days d-flex justify-content-between">
                                 <span class="d-flex justify-content-center align-items-center">
                                     <i class="fa fa-star"></i>
@@ -392,13 +391,13 @@
                         <div class="thumb">
                             <img data-cfsrc="img/place/2.png" alt style="display:none;visibility:hidden;"><noscript><img
                                     src="img/place/2.png" alt></noscript>
-                            <a href="#" class="prise">$500</a>
+                            <a href="#" class="prise"></a>
                         </div>
                         <div class="place_info">
                             <a href="destination_details.html">
-                                <h3>Korola Megna</h3>
+                                <h3>Delhi</h3>
                             </a>
-                            <p>United State of America</p>
+                            <p>India</p>
                             <div class="rating_days d-flex justify-content-between">
                                 <span class="d-flex justify-content-center align-items-center">
                                     <i class="fa fa-star"></i>
@@ -421,13 +420,13 @@
                         <div class="thumb">
                             <img data-cfsrc="img/place/3.png" alt style="display:none;visibility:hidden;"><noscript><img
                                     src="img/place/3.png" alt></noscript>
-                            <a href="#" class="prise">$500</a>
+                            <a href="#" class="prise"></a>
                         </div>
                         <div class="place_info">
                             <a href="destination_details.html">
-                                <h3>London</h3>
+                                <h3>Lonavala</h3>
                             </a>
-                            <p>United State of America</p>
+                            <p>India</p>
                             <div class="rating_days d-flex justify-content-between">
                                 <span class="d-flex justify-content-center align-items-center">
                                     <i class="fa fa-star"></i>
@@ -450,13 +449,13 @@
                         <div class="thumb">
                             <img data-cfsrc="img/place/4.png" alt style="display:none;visibility:hidden;"><noscript><img
                                     src="img/place/4.png" alt></noscript>
-                            <a href="#" class="prise">$500</a>
+                            <a href="#" class="prise"></a>
                         </div>
                         <div class="place_info">
                             <a href="destination_details.html">
-                                <h3>Miami Beach</h3>
+                                <h3>Pondicherry</h3>
                             </a>
-                            <p>United State of America</p>
+                            <p>India</p>
                             <div class="rating_days d-flex justify-content-between">
                                 <span class="d-flex justify-content-center align-items-center">
                                     <i class="fa fa-star"></i>
@@ -479,13 +478,13 @@
                         <div class="thumb">
                             <img data-cfsrc="img/place/5.png" alt style="display:none;visibility:hidden;"><noscript><img
                                     src="img/place/5.png" alt></noscript>
-                            <a href="#" class="prise">$500</a>
+                            <a href="#" class="prise"></a>
                         </div>
                         <div class="place_info">
                             <a href="destination_details.html">
-                                <h3>California</h3>
+                                <h3>Rishikesh</h3>
                             </a>
-                            <p>United State of America</p>
+                            <p>UIndia</p>
                             <div class="rating_days d-flex justify-content-between">
                                 <span class="d-flex justify-content-center align-items-center">
                                     <i class="fa fa-star"></i>
@@ -508,13 +507,13 @@
                         <div class="thumb">
                             <img data-cfsrc="img/place/6.png" alt style="display:none;visibility:hidden;"><noscript><img
                                     src="img/place/6.png" alt></noscript>
-                            <a href="#" class="prise">$500</a>
+                            <a href="#" class="prise"></a>
                         </div>
                         <div class="place_info">
                             <a href="destination_details.html">
-                                <h3>Saintmartine Iceland</h3>
+                                <h3>Shimla</h3>
                             </a>
-                            <p>United State of America</p>
+                            <p>India</p>
                             <div class="rating_days d-flex justify-content-between">
                                 <span class="d-flex justify-content-center align-items-center">
                                     <i class="fa fa-star"></i>
@@ -567,7 +566,7 @@
                             <img src="img/svg_icon/1.svg" alt>
                         </div>
                         <h3>Comfortable Journey</h3>
-                        <p>A wonderful serenity has taken to the possession of my entire soul.</p>
+                        <p>Travel Before youn run out of time.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
@@ -576,7 +575,7 @@
                             <img src="img/svg_icon/2.svg" alt>
                         </div>
                         <h3>Luxuries Hotel</h3>
-                        <p>A wonderful serenity has taken to the possession of my entire soul.</p>
+                        <p>Once a year Go Someplace you've never been before.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
@@ -585,7 +584,7 @@
                             <img src="img/svg_icon/3.svg" alt>
                         </div>
                         <h3>Travel Guide</h3>
-                        <p>A wonderful serenity has taken to the possession of my entire soul.</p>
+                        <p>Travel the best way to be lost and found all at the same time.</p>
                     </div>
                 </div>
             </div>
@@ -675,7 +674,7 @@
                         </div>
                         <div class="info">
                             <div class="date">
-                                <span>Oct 12, 2019</span>
+                                <span>Feb 5, 2021</span>
                             </div>
                             <a href="#">
                                 <h3>Journeys Are Best Measured In
@@ -692,7 +691,7 @@
                         </div>
                         <div class="info">
                             <div class="date">
-                                <span>Oct 12, 2019</span>
+                                <span>Feb 5, 2021</span>
                             </div>
                             <a href="#">
                                 <h3>Journeys Are Best Measured In
@@ -709,7 +708,7 @@
                         </div>
                         <div class="info">
                             <div class="date">
-                                <span>Oct 12, 2019</span>
+                                <span>Feb 5, 2021</span>
                             </div>
                             <a href="#">
                                 <h3>Journeys Are Best Measured In
@@ -734,8 +733,8 @@
                                             alt></noscript>
                                 </a>
                             </div>
-                            <p>5th flora, 700/D kings road, green <br> lane New York-1782 <br>
-                                <a href="#">+10 367 826 2567</a> <br>
+                            <p>2,Sai Charan, Gujarat <br> lane India -91 <br>
+                                <a href="#">+917854632810</a> <br>
                                 <a href="#"><span class="__cf_email__"
                                         data-cfemail="05666a6b716466714566647775606b7160772b666a68">[email&#160;protected]</span></a>
                             </p>
