--- a/index.html
+++ b/index.html
@@ -25,6 +25,38 @@
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css">
     <link rel="stylesheet" href="css/style.css">
 
+    <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
+    <!-- Google fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic"
+        rel="stylesheet" type="text/css">
+    <!-- Third party plugin CSS-->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css" rel="stylesheet">
+    <!-- Core theme CSS (includes Bootstrap)-->
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-analytics.js"></script>
+    <script defer="" src="https://www.gstatic.com/firebasejs/8.2.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-database.js"></script>
+    <script defer="" src="https://www.gstatic.com/firebasejs/8.2.1/firebase-firestore.js"></script>
+    <script defer="" src="https://www.gstatic.com/firebasejs/8.2.1/firebase-storage.js"></script>
+
+    <script>
+        var firebaseConfig = {
+            apiKey: "AIzaSyAayDcLEEcBmJbrH3ZbzBEQKVB2vVXcNFo",
+            authDomain: "gidctouristguide.firebaseapp.com",
+            projectId: "gidctouristguide",
+            storageBucket: "gidctouristguide.appspot.com",
+            messagingSenderId: "97113204612",
+            appId: "1:97113204612:web:32805840ef567315d9dfd1",
+            measurementId: "G-PWFPWG4PF5"
+        };
+        firebase.initializeApp(firebaseConfig);
+        firebase.analytics();
+    </script>
+    <script src="js/indexMain.js"></script>
 </head>
 
 <body>
@@ -193,7 +225,7 @@
                 <div class="col-lg-6">
                     <div class="section_title text-center mb_70">
                         <h3>Popular Destination</h3>
-                        
+
                     </div>
                 </div>
             </div>
@@ -267,8 +299,8 @@
                     <div class="single_destination">
                         <div class="thumb">
                             <img data-cfsrc="img/destination/jaisalmer.png" alt
-                                style="display:none;visibility:hidden;"><noscript><img src="img/destination/jaisalmer.png"
-                                    alt></noscript>
+                                style="display:none;visibility:hidden;"><noscript><img
+                                    src="img/destination/jaisalmer.png" alt></noscript>
                         </div>
                         <div class="content">
                             <p class="d-flex align-items-center">Jaisalmer <a href="travel_destination.html"> 05
