Commit Done to JS and HTML by Nandu

--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
                                             <li><a href="about.html">About</a></li>
                                             <li id="login"><a style='cursor:pointer' id="btnLogin">Login</a></li>
                                             <li id="Username" class='invisible'></li>
-                                            <li id="Photo" class='invisible'><img src="" alt="" id="dpPhoto"></li>
+                                            <li id="Photo" class='invisible'><img src="" height="35px" width='35px'
+                                                    alt="" id="dpPhoto" draggable="false"></li>
                                             <li><a class href="travel_destination.html">Destination</a>
                                             </li>
                                             <!-- <li><a href="#">pages <i class="ti-angle-down"></i></a>
