--- a/index2.html
+++ b/index2.html
@@ -24,9 +24,8 @@
     <link rel="stylesheet" href="css/slicknav.css">
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
 
-    <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
+
     <!-- Google fonts-->
     <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic"
@@ -92,8 +91,8 @@
                                             <li><a href="contact.html">Contact</a></li>
                                             <li id="login"><a style='cursor:pointer' id="btnLogin">Login</a></li>
                                             <li id="Username" class='invisible'></li>
-                                            <li id="Photo" class='invisible'><img src="" alt="" id="dpPhoto"
-                                                    draggable="false"></li>
+                                            <li id="Photo" class='invisible'><img src="" height="35px" width='35px'
+                                                    alt="" id="dpPhoto" draggable="false"></li>
                                             <!-- <li><a class href="travel_destination.html">Destination</a> -->
                                             </li>
                                             <!-- <li><a href="#">pages <i class="ti-angle-down"></i></a>
