--- a/index2.html
+++ b/index2.html
@@ -24,35 +24,6 @@
     <link rel="stylesheet" href="css/slicknav.css">
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css">
     <link rel="stylesheet" href="css/style.css">
-
-
-    <!-- Google fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic"
-        rel="stylesheet" type="text/css">
-    <!-- Third party plugin CSS-->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css" rel="stylesheet">
-    <!-- Core theme CSS (includes Bootstrap)-->
-
-    <!-- TODO: Add SDKs for Firebase products that you want to use
-     https://firebase.google.com/docs/web/setup#available-libraries -->
-    <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-firestore.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-analytics.js"></script>
-    <script defer="" src="https://www.gstatic.com/firebasejs/8.2.1/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-database.js"></script>
-    <script defer="" src="https://www.gstatic.com/firebasejs/8.2.1/firebase-storage.js"></script>
-    <!-- SweetAlert 2 Files -->
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10/dist/sweetalert2.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/promise-polyfill"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@10/dist/sweetalert2.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <style>
-        .invisible {
-            display: none !important;
-            visibility: hidden !important;
-        }
-    </style>
 </head>
 
 <body>
@@ -69,11 +40,6 @@
                             <div class="col-xl-2 col-lg-2">
                                 <div class="logo">
                                     <a href>
-                                        <script type="text/javascript" style="display:none">
-                                            //<![CDATA[
-                                            window.__mirage2 = { petok: "d332294f8cd1c8388df4dd39ba1e92cf26b0f1af-1614013487-1800" };
-//]]>
-                                        </script>
                                         <script type="text/javascript"
                                             src="https://ajax.cloudflare.com/cdn-cgi/scripts/04b3eb47/cloudflare-static/mirage2.min.js"></script>
                                         <img data-cfsrc="img/TouristLogo.png" alt
@@ -88,13 +54,25 @@
                                         <ul id="navigation">
                                             <li><a class="active" href>home</a></li>
                                             <li><a href="about.html">About</a></li>
-                                            <li><a href="contact.html">Contact</a></li>
+
+                                            <!-- #### LogIn FormatMenu START #### -->
                                             <li id="login"><a style='cursor:pointer' id="btnLogin">Login</a></li>
+                                            <li id="guidelogin" class='invisible'>
+                                                <a style='cursor:pointer' id="btnGuideLogin">
+                                                    Guide Login
+                                                </a>
+                                            </li>
+                                            <li id="liLogout" class='invisible' style='cursor:pointer'>
+                                                <a id="btnLogout">Logout</a>
+                                            </li>
+                                            <input type="hidden" id="hdnUserType">
                                             <li id="Username" class='invisible'></li>
                                             <li id="Photo" class='invisible'><img src="" height="35px" width='35px'
                                                     alt="" id="dpPhoto" draggable="false"></li>
-                                            <!-- <li><a class href="travel_destination.html">Destination</a> -->
-                                            </li>
+                                            <!-- #### LogIn FormatMenu STOP #### -->
+
+                                            <!-- <li><a class href="travel_destination.html">Destination</a>
+                                            </li> -->
                                             <!-- <li><a href="#">pages <i class="ti-angle-down"></i></a>
                                                 <ul class="submenu">
                                                     <li><a href="destination_details.html">Destinations details</a></li>
@@ -106,8 +84,8 @@
                                                     <li><a href="blog.html">blog</a></li>
                                                     <li><a href="single-blog.html">single-blog</a></li>
                                                 </ul>
-                                            </li> -->
-
+                                            </li>
+                                            <li><a href="contact.html">Contact</a></li> -->
                                         </ul>
                                     </nav>
                                 </div>
@@ -923,7 +901,37 @@
         });
     </script>
 
+
+    <!-- #### COPY THIS SCRIPTS START #### -->
+    <!-- Google fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic"
+        rel="stylesheet" type="text/css">
+    <!-- Third party plugin CSS-->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css" rel="stylesheet">
+    <!-- Core theme CSS (includes Bootstrap)-->
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+ https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-analytics.js"></script>
+    <script defer="" src="https://www.gstatic.com/firebasejs/8.2.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-database.js"></script>
+    <script defer="" src="https://www.gstatic.com/firebasejs/8.2.1/firebase-storage.js"></script>
+    <!-- SweetAlert 2 Files -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10/dist/sweetalert2.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/promise-polyfill"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@10/dist/sweetalert2.min.css">
+    <style>
+        .invisible {
+            display: none !important;
+            visibility: hidden !important;
+        }
+    </style>
     <script src="js/indexMain.js"></script>
+
+    <!-- #### COPY THIS SCRIPTS END #### -->
 </body>
 
 </html>
