--- a/index.html
+++ b/index.html
@@ -780,43 +780,44 @@
                                 <div class="single_insta">
                                     <a href="#">
                                         <img data-cfsrc="img/instagram/1.png" alt
-                                            style="display:none;visibility:hidden;"><noscript><img
-                                                src="img/instagram/1.png" alt></noscript>
+                                            style="display:none;visibility:hidden;"><noscript>
+                                            <img src="img/instagram/1.png" alt>
+                                        </noscript>
                                     </a>
                                 </div>
                                 <div class="single_insta">
                                     <a href="#">
                                         <img data-cfsrc="img/instagram/2.png" alt
-                                            style="display:none;visibility:hidden;"><noscript><img
-                                                src="img/instagram/2.png" alt></noscript>
+                                            style="display:none;visibility:hidden;"><noscript>
+                                            <img src="img/instagram/2.png" alt></noscript>
                                     </a>
                                 </div>
                                 <div class="single_insta">
                                     <a href="#">
                                         <img data-cfsrc="img/instagram/3.png" alt
-                                            style="display:none;visibility:hidden;"><noscript><img
-                                                src="img/instagram/3.png" alt></noscript>
+                                            style="display:none;visibility:hidden;"><noscript>
+                                            <img src="img/instagram/3.png" alt></noscript>
                                     </a>
                                 </div>
                                 <div class="single_insta">
                                     <a href="#">
                                         <img data-cfsrc="img/instagram/4.png" alt
-                                            style="display:none;visibility:hidden;"><noscript><img
-                                                src="img/instagram/4.png" alt></noscript>
+                                            style="display:none;visibility:hidden;"><noscript>
+                                            <img src="img/instagram/4.png" alt></noscript>
                                     </a>
                                 </div>
                                 <div class="single_insta">
                                     <a href="#">
                                         <img data-cfsrc="img/instagram/5.png" alt
-                                            style="display:none;visibility:hidden;"><noscript><img
-                                                src="img/instagram/5.png" alt></noscript>
+                                            style="display:none;visibility:hidden;"><noscript>
+                                            <img src="img/instagram/5.png" alt></noscript>
                                     </a>
                                 </div>
                                 <div class="single_insta">
                                     <a href="#">
                                         <img data-cfsrc="img/instagram/6.png" alt
-                                            style="display:none;visibility:hidden;"><noscript><img
-                                                src="img/instagram/6.png" alt></noscript>
+                                            style="display:none;visibility:hidden;"><noscript>
+                                            <img src="img/instagram/6.png" alt></noscript>
                                     </a>
                                 </div>
                             </div>
