--- a/index2.html
+++ b/index2.html
@@ -73,12 +73,12 @@
 
                                             <!-- <li><a class href="travel_destination.html">Destination</a>
                                             </li> -->
-                                            <!-- <li><a href="#">pages <i class="ti-angle-down"></i></a>
+                                            <li><a href="#">pages <i class="ti-angle-down"></i></a>
                                                 <ul class="submenu">
                                                     <li><a href="destination_details.html">Destinations details</a></li>
                                                     <li><a href="elements.html">elements</a></li>
                                                 </ul>
-                                            </li> -->
+                                            </li>
                                             <!-- <li><a href="#">blog <i class="ti-angle-down"></i></a>
                                                 <ul class="submenu">
                                                     <li><a href="blog.html">blog</a></li>
