--- a/index.html
+++ b/index.html
@@ -65,6 +65,12 @@
                                             <li id="liLogout" class='invisible' style='cursor:pointer'>
                                                 <a id="btnLogout">Logout</a>
                                             </li>
+                                            <li><a href="#">pages <i class="ti-angle-down"></i></a>
+                                                <ul class="submenu">
+                                                    <li><a href="destination_details.html">Destinations details</a></li>
+                                                    <li><a href="elements.html">elements</a></li>
+                                                </ul>
+                                            </li>
                                             <input type="hidden" id="hdnUserType">
                                             <li id="Username" class='invisible'></li>
                                             <li id="Photo" class='invisible'><img src="" height="35px" width='35px'
