--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
                                             <li id="liLogout" class='invisible' style='cursor:pointer'>
                                                 <a id="btnLogout">Logout</a>
                                             </li>
+                                            <li><a class href="travel_destination.html">Destination</a>
+                                            </li>
                                             <li><a href="#">pages <i class="ti-angle-down"></i></a>
                                                 <ul class="submenu">
                                                     <li><a href="destination_details.html">Destinations details</a></li>
