--- a/index2.html
+++ b/index2.html
@@ -71,8 +71,8 @@
                                                     alt="" id="dpPhoto" draggable="false"></li>
                                             <!-- #### LogIn FormatMenu STOP #### -->
 
-                                            <!-- <li><a class href="travel_destination.html">Destination</a>
-                                            </li> -->
+                                            <li><a class href="travel_destination.html">Destination</a>
+                                            </li>
                                             <li><a href="#">pages <i class="ti-angle-down"></i></a>
                                                 <ul class="submenu">
                                                     <li><a href="destination_details.html">Destinations details</a></li>
