--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
                                             <li><a class="active" href>home</a></li>
                                             <li><a href="about.html">About</a></li>
                                             <!-- #### LogIn FormatMenu START #### -->
-                                            <li id="login"><a style='cursor:pointer' id="btnLogin">Login</a></li>
+                                            <li id="login"><a style='cursor:pointer' id="btnLogin" onclick="login()">Login</a></li>
                                             <li id="guidelogin" class='invisible'>
-                                                <a style='cursor:pointer' id="btnGuideLogin">
+                                                <a style='cursor:pointer' id="btnGuideLogin" onclick="guideSignIn()">
                                                     Guide Login
                                                 </a>
                                             </li>
