--- a/index2.html
+++ b/index2.html
@@ -56,9 +56,10 @@
                                             <li><a href="about.html">About</a></li>
 
                                             <!-- #### LogIn FormatMenu START #### -->
-                                            <li id="login"><a style='cursor:pointer' id="btnLogin">Login</a></li>
+                                            <li id="login"><a style='cursor:pointer' id="btnLogin"
+                                                    onclick="login()">Login</a></li>
                                             <li id="guidelogin" class='invisible'>
-                                                <a style='cursor:pointer' id="btnGuideLogin">
+                                                <a style='cursor:pointer' id="btnGuideLogin" onclick="guideSignIn()">
                                                     Guide Login
                                                 </a>
                                             </li>
@@ -120,8 +121,6 @@
         </div>
     </header>
 
-
-
     <div class="slider_area">
         <div class="slider_active owl-carousel">
             <div class="single_slider  d-flex align-items-center slider_bg_1 overlay">
@@ -163,7 +162,6 @@
         </div>
     </div>
 
-
     <div class="where_togo_area">
         <div class="container">
             <div class="row align-items-center">
@@ -197,7 +195,6 @@
             </div>
         </div>
     </div>
-
 
     <div class="popular_destination_area">
         <div class="container">
@@ -291,7 +288,6 @@
             </div>
         </div>
     </div>
-
 
     <div class="newletter_area overlay">
         <div class="container">
